--- a/template.yaml
+++ b/template.yaml
@@ -24,8 +24,8 @@ Resources:
         HelloWorld:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
-            Path: /hello
-            Method: get
+            Path: /webhook
+            Method: post
 
   ApplicationResourceGroup:
     Type: AWS::ResourceGroups::Group
