--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -7,6 +7,7 @@
   "author": "SAM CLI",
   "license": "MIT",
   "dependencies": {
+    "@sanity/block-content-to-markdown": "^0.0.5",
     "axios": ">=0.21.1"
   },
   "scripts": {
