--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "dependencies": {
     "@sanity/block-content-to-markdown": "^0.0.5",
-    "axios": ">=0.21.1"
+    "axios": ">=0.21.1",
+    "moment": "^2.29.4"
   },
   "scripts": {
     "test": "mocha tests/unit/"
