--- a/medium_article_publish/package.json
+++ b/medium_article_publish/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@sanity/block-content-to-markdown": "^0.0.5",
+    "aws-sdk": "^2.1304.0",
     "axios": ">=0.21.1",
     "moment": "^2.29.4",
     "showdown": "^2.1.0"
