--- a/template.yaml
+++ b/template.yaml
@@ -142,6 +142,8 @@ Resources:
       Timeout: 3
       Policies: 
         - CloudWatchPutMetricPolicy: {}
+        - AWSSecretsManagerGetSecretValuePolicy:
+            SecretArn: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:blogs-api-9A1WfQ"
 
   ApplicationResourceGroup:
     Type: AWS::ResourceGroups::Group
