--- a/template.yaml
+++ b/template.yaml
@@ -154,10 +154,11 @@ Resources:
       Architectures:
       - x86_64
       Timeout: 3
-      Policies: 
+      Policies:
+        - AmazonOpenSearchServiceFullAccess 
         - CloudWatchPutMetricPolicy: {}
-        - AWSSecretsManagerGetSecretValuePolicy:
-            SecretArn: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:blogs-api-9A1WfQ"
+        - SecretsManagerReadWrite
+      
 
   ApplicationResourceGroup:
     Type: AWS::ResourceGroups::Group
