--- a/template.yaml
+++ b/template.yaml
@@ -35,10 +35,10 @@ Resources:
 
 
 
-  HelloWorldFunction:
+  StepFunctionInitiatorFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: hello-world/
+      CodeUri: stepfunction-initiator-lambda/
       Handler: app.lambdaHandler
       Runtime: nodejs16.x
       Architectures:
@@ -187,12 +187,12 @@ Outputs:
   HelloWorldApi:
     Description: API Gateway endpoint URL for Prod stage for Hello World function
     Value: !Sub "https://${SanityEventApiGateway}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-  HelloWorldFunction:
+  StepFunctionInitiatorFunction:
     Description: Hello World Lambda Function ARN
-    Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
+    Value: !GetAtt StepFunctionInitiatorFunction.Arn
+  StepFunctionInitiatorFunctionIamRole:
     Description: Implicit IAM Role created for Hello World function
-    Value: !GetAtt HelloWorldFunctionRole.Arn
+    Value: !GetAtt StepFunctionInitiatorFunctionRole.Arn
   StateMachine:
     Value: !GetAtt StateMachine.Arn
     Description: Statemachine Arn
