--- a/stepfunction-initiator-lambda/package.json
+++ b/stepfunction-initiator-lambda/package.json
@@ -7,6 +7,8 @@
   "author": "SAM CLI",
   "license": "MIT",
   "dependencies": {
+    "@sanity/client": "^5.2.2",
+    "@sanity/image-url": "^1.0.2",
     "axios": ">=0.21.1",
     "moment": "^2.29.4"
   },
